[wasm] Fix broken --print-wasm-code for sync compiles.

R=clemensh@chromium.org
BUG=chromium:849713

Change-Id: I3af8a654c32f8eb77dcdd3dffeb2dd826b90db9d
Reviewed-on: https://chromium-review.googlesource.com/1087451
Reviewed-by: Clemens Hammacher <clemensh@chromium.org>
Commit-Queue: Michael Starzinger <mstarzinger@chromium.org>
Cr-Commit-Position: refs/heads/master@{#53533}